# atomic-chat-model-catalog

./: .gitignore  README.md
.github/workflows/: cron.yml  validate.yml
config/: orgs.json  schema.catalog.json  schema.orgs.json
scripts/: build_index.mjs  package.json  pyproject.toml  scrape.py
